soft light texture blend mode zero effect #41456

Closed
opened 2014-08-16 05:36:56 +02:00 by ian lloyd dela cruz · 9 comments

System Information
windows 7 geforce 210

Blender Version
Broken: b65a022

same attitude also observed from blender copy installed at office nearly 6 months ago

Short description of error
soft light texture blend mode has no effect on viewport. multiply and overlay blend attitudes observed has same effect in 2d app. soft light affects nothing.

Exact steps for others to reproduce the error
texture some stuff, produce a master layer (base color) then create the soft light layer and paint.

**System Information** windows 7 geforce 210 **Blender Version** Broken: b65a022 same attitude also observed from blender copy installed at office nearly 6 months ago **Short description of error** soft light texture blend mode has no effect on viewport. multiply and overlay blend attitudes observed has same effect in 2d app. soft light affects nothing. **Exact steps for others to reproduce the error** texture some stuff, produce a master layer (base color) then create the soft light layer and paint.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @lazymouse

Added subscriber: @lazymouse

Added subscriber: @mont29

Added subscriber: @mont29
Antonis Ryakiotakis was assigned by Bastien Montagne 2014-08-16 14:33:14 +02:00

Soft and linear light seem to have no effect indeed… Antony, this is your area, you should know for sure whether we are stupid or if something is broken here. :)

Soft and linear light seem to have no effect indeed… Antony, this is your area, you should know for sure whether we are stupid or if something is broken here. :)

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

This is pretty straightforward to fix: soft light and linear light weren't implemented in glsl... :/ Will rebase my checkout of the source with current master and upload a patch for review

This is pretty straightforward to fix: soft light and linear light weren't implemented in glsl... :/ Will rebase my checkout of the source with current master and upload a patch for review

This issue was referenced by b07ea2fc15

This issue was referenced by b07ea2fc15ac5593442570f0bcb67c84b620b203

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b07ea2fc15.

Closed by commit b07ea2fc15.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41456
No description provided.